
    - Bug fix: was a fatal error when a value was submitted for Label element
      (code called delete_nested_hash_value instead of deleted_nested_hash_key).
    
    - Bug fix: RT#65728 Filter::Split should return a value if no value was
      submitted.
    
    - DateTime elements, minutes and seconds have new 'interval' option.
    
    - Now only delete submitted value if there's no other field on the form with
      the same name.

0.08002 2010-09-22

    - Incompatible Change: removed all previously deprecated methods.
    
    - Incompatible Change: HTML::FormFu::QueryType::Catalyst
      File uploads under Catalyst no longer have copy_to(), link_to() and
      catalyst_upload() methods
    
    - Deprecated passing multiple arguments to many methods, where they were
      being implicitly converted to a hash-ref or array-ref.
      A warning is now issued.
    
    - Fix: Constraint::Equal with not(1) set no longer sets an error when both
      field values are empty strings.
    
    - Fix: An empty block with nested_name set, containing Label elements and
      no other fields, was causing the block's nested_name to be added to
      $form->valid(). RT #54967
    
    - Constraints that inherit from HTML::FormFu::Constraint::_others have a new
      'other_siblings' option, which auto-generates the 'others' list.
    
    - Constraint 'when' condition now supports new 'fields' and 'any_field'
      options.
    
    - Bumped required version of DateTime to 0.54 - needed to pass tests under
      Test::More 0.96.

0.07003 2010-08-02

    - Fix: Group element now escapes each items attributes, label_attributes
      and container attributes (based on by patch by Jeff Dairiki).
    
    - Fix: If using default_natural, use default_datetime_args{set_time_zone}
      if it's also set (Radek).
    
    - Filter::HTMLScrubber extra functionality.
    
    - Update _merge_hashes() so it can also merge arrays and hashes into a new